--- a/style.css
+++ b/style.css
@@ -1,28 +1,11 @@
-body {
-    background: black;
-}
-
-#container {
+#canvas1 {
+    border 3px solid black;
     position: absolute;
-    width: 800px;
-    transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    font-size: 25px;
-
-}
-#canvas1 {
-    position: relative;
-    
-    width: 800px;
-    height: 700px;
-    
+    transform: translate(-50%, -50%);
+    height: 10000px;
+    width: 500px;
+   
 }
 
-#slider {
-    width: 100%;
-}
-
-p {
-    color: white;
-}
